<?xml version="1.0" encoding="UTF-8"?>

<!--
 Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
 DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

 This code is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License version 2 only, as
 published by the Free Software Foundation.

 This code is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 version 2 for more details (a copy is included in the LICENSE file that
 accompanied this code).

 You should have received a copy of the GNU General Public License version
 2 along with this work; if not, write to the Free Software Foundation,
 Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.

 Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
 or visit www.oracle.com if you need additional information or have any
 questions.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.openjdk</groupId>
        <artifactId>jmh-jdk-microbenchmarks</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <artifactId>redefineagent</artifactId>
    <packaging>jar</packaging>
    <name>OpenJDK Microbenchmark Corpus (redefineagent jar)</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>9</source>
                    <target>9</target>
                    <compilerArgs>
                        <arg>--add-modules=java.base,java.compiler,java.instrument,jdk.jartool</arg>
                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <arg>--add-exports=jdk.jartool/sun.tools.jar=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <!-- Do not waste time compressing, maven-shade-plugin will compress the final JAR -->
                        <compress>false</compress>
                        <manifestEntries>
                            <Premain-Class>org.openjdk.bench.vm.jvmti.RedefineClassHelper</Premain-Class>
                            <Agent-Class>org.openjdk.bench.vm.jvmti.RedefineClassHelper</Agent-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.openjdk.jmh:*</exclude>
                                    <exclude>org.sonatype.aether:*</exclude>
                                    <exclude>org.codehaus.plexus:*</exclude>
                                    <exclude>org.sonatype.plexus:*</exclude>
                                    <exclude>junit:*</exclude>
                                    <exclude>org.ow2.asm:*</exclude>
                                    <exclude>commons-io:commons-io</exclude>
                                    <exclude>org.openjdk.jmh:jmh-core:*</exclude>
                                    <exclude>org.openjdk.jmh:jmh-generator-annprocess:*</exclude>
                                    <exclude>org.vafer:jdependency</exclude>
                                    <exclude>org.ow2.asm:asm-analysis</exclude>
                                    <exclude>org.ow2.asm:asm-util</exclude>
                                    <exclude>com.google.guava:guava</exclude>
                                    <exclude>net.sf.jopt-simple:jopt-simple</exclude>
                                    <exclude>org.apache.commons:commons-math3</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <attach>false</attach>
                            <descriptors>
                                <descriptor>
                                    src/main/assembly/dist.xml
                                </descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.10.b1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <header>${project.basedir}/src/license/gpl_cpe/header.txt</header>
                            <skipExistingHeaders>true</skipExistingHeaders>
                            <strictCheck>true</strictCheck>
                            <includes>
                                <include>src/main/java</include>
                            </includes>
                            <mapping>
                                <java>PHP</java>
                            </mapping>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.openjdk</groupId>
            <artifactId>micros-util</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>

</project>


